<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrarsePacienteVM" type="com.dpa.app.modules.registrarsepaciente.data.viewmodel.RegistrarsePacienteVM"/>
    </data>
    <FrameLayout android:id="@+id/frameRegistrarsepac"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylelight_green_301">
        <View android:background="@color/amber_100"
            android:id="@+id/viewRectangleOne"
            android:layout_gravity="center"
            android:layout_height="@dimen/_800pxh"
            android:layout_marginStart="@dimen/_1pxh" android:layout_width="@dimen/_360pxh"/>
        <FrameLayout android:id="@+id/frameStackhactividadesbg"
            android:layout_gravity="center"
            android:layout_height="@dimen/_800pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginStart="@dimen/_1pxh" android:layout_width="@dimen/_360pxh">
            <ImageView android:id="@+id/imageHActividadesBg"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_hactividadesbg}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_hactividadesbg"/>

            <LinearLayout
                android:id="@+id/linearColumnlogoone"
                android:layout_width="wrap_content"
                android:layout_height="639dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_40pxh"
                android:layout_marginVertical="@dimen/_40pxv"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageLogoOne"
                    imageRes="@{@drawable/img_logo1}"
                    android:layout_width="@dimen/_110pxh"
                    android:layout_height="@dimen/_94pxh"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_logo1" />

                <TextView
                    android:id="@+id/txtNombre"
                    style="@style/txtInterregular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtNombre}"
                    tools:text="@string/lbl_nombre" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/txtApellido"
                    style="@style/txtInterregular12"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginStart="@dimen/_93pxh"
                    android:layout_marginEnd="@dimen/_93pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtApellido}"
                    tools:text="@string/lbl_apellido" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/txtCorreoElectron"
                    style="@style/txtInterregular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtCorreoElectron}"
                    tools:text="@string/msg_correo_electron" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/txtContrasea"
                    style="@style/txtInterregular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtContrasea}"
                    tools:text="@string/lbl_contrase_a" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/txtNumeroTelefoni"
                    style="@style/txtInterregular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtNumeroTelefoni}"
                    tools:text="@string/msg_numero_telefoni" />

                <EditText
                    android:id="@+id/editTextPhone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"

                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/txtEdad"
                    style="@style/txtInterregular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrarsePacienteVM.registrarsePacienteModel.txtEdad}"
                    tools:text="@string/lbl_edad" />

                <EditText
                    android:id="@+id/editTextEdad"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingBottom="@dimen/_13pxv"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnIniciar"
                    style="@style/btnSolidRoundedOutline_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_61pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_iniciar"
                    android:textAllCaps="false"
                    tools:text="@string/lbl_iniciar" />

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
