<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="recuperarVM" type="com.dpa.app.modules.recuperar.data.viewmodel.RecuperarVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRecuperar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleamber_100">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackloginbgtwo"
            android:layout_height="match_parent" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageLoginBgTwo"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_loginbg1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_loginbg1"/>
            <LinearLayout android:id="@+id/linearColumnlogoone"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_184pxv"
                android:layout_marginEnd="@dimen/_57pxh"
                android:layout_marginStart="@dimen/_57pxh"
                android:layout_marginTop="@dimen/_184pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageLogoOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_129pxh"
                    android:layout_marginEnd="@dimen/_37pxh"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_width="@dimen/_167pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logo1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo1"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCorreoElectron"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_41pxh"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{recuperarVM.recuperarModel.txtCorreoElectron}"
                    style="@style/txtInterregular12" tools:text="@string/msg_correo_electron"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_100_border_black_900_radius_23_5"
                    android:id="@+id/viewRectangleThree"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_47pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_245pxh"/>
                <FrameLayout android:id="@+id/frameStacklanguage"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_61pxv"
                    android:layout_marginTop="@dimen/_23pxv" android:layout_width="@dimen/_245pxh">
                    <LinearLayout android:id="@+id/linearColumnlanguage"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:orientation="vertical" style="@style/groupStylegray_100cornerRadius">
                        <TextView android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:id="@+id/txtLanguage"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_16pxv"
                            android:layout_marginEnd="@dimen/_54pxh"
                            android:layout_marginStart="@dimen/_58pxh"
                            android:layout_marginTop="@dimen/_15pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{recuperarVM.recuperarModel.txtLanguage}"
                            style="@style/txtInterregular12" tools:text="@string/msg"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtCodigoRecibido"
                        android:layout_gravity="top|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_37pxh"
                        android:layout_marginStart="@dimen/_37pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{recuperarVM.recuperarModel.txtCodigoRecibido}"
                        style="@style/txtInterregular12" tools:text="@string/msg_codigo_recibido"/>
                </FrameLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnAceptar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_41pxh"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_58pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_aceptar"
                    android:textAllCaps="false"
                    style="@style/btnSolidRoundedOutline_2" tools:text="@string/lbl_aceptar"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
